<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/gm_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/sv_detail_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:orientation="vertical"
            tools:context=".DetailActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginBottom="0dp">

                <androidx.cardview.widget.CardView
                    style="@style/information_pad_theme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/user_avatar_pad"
                    style="@style/banner_color_theme"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="top"
                    android:layout_marginTop="-15dp"
                    app:cardCornerRadius="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        style="@style/banner_ornaments_theme"
                        android:layout_width="330dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="-5dp"
                        tools:ignore="ContentDescription" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/information_pad_theme"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:cardCornerRadius="80dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/user_avatar_pad">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_user_detail_avatar"
                        android:layout_width="104dp"
                        android:layout_height="104dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/cd_user_detail_img"
                        android:src="@drawable/user_dummy"
                        tools:src="@drawable/user_dummy" />

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                style="@style/information_pad_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="-5dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="25dp"
                app:cardCornerRadius="7dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_user_detail_name"
                        style="@style/font_theme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/default_loading"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_user_detail_username"
                        style="@style/font_theme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/default_loading"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                style="@style/font_theme"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="4dp"
                                android:text="@string/string_repository"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/tv_user_detail_repository"
                                style="@style/font_theme"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="4dp"
                                android:text="@string/default_loading"
                                android:textSize="20sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                style="@style/font_theme"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="4dp"
                                android:text="@string/string_followers"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/tv_user_detail_followers"
                                style="@style/font_theme"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="4dp"
                                android:text="@string/default_loading"
                                android:textSize="20sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                style="@style/font_theme"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="4dp"
                                android:text="@string/string_following"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/tv_user_detail_following"
                                style="@style/font_theme"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="4dp"
                                android:text="@string/default_loading"
                                android:textSize="20sp" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="16dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_user_detail_location"
                                style="@style/font_theme.small"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginRight="8dp"
                                android:drawablePadding="16dp"
                                android:text="@string/default_loading"
                                android:textSize="16sp"
                                app:drawableStartCompat="@drawable/ic_location_24" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="8dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_user_detail_company"
                                style="@style/font_theme.small"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginRight="8dp"
                                android:drawablePadding="16dp"
                                android:text="@string/default_loading"
                                android:textSize="16sp"
                                app:drawableStartCompat="@drawable/ic_company_24" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs_user_detail"
                style="@style/tab_detail_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabGravity="fill"
                app:tabMaxWidth="0dp" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager_user_detail"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_favorite"
        style="@style/fab_add_favorite_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/cd_favorite_fab"
        android:foregroundGravity="bottom"
        android:src="@drawable/ic_white_favorite_border_24"
        app:borderWidth="0dp"
        app:fabSize="normal"
        app:layout_anchor="@id/sv_detail_user"
        app:layout_anchorGravity="bottom|end" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>

